--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ darkmode: false
 linkedin_username: reedus
 
 # Additional icon links
+additional_links:
 - title: Location
   icon: fas fa-map-marker
   url: https://goo.gl/maps/7hL1KTYAgQnMWHeX8
@@ -46,15 +47,15 @@ content:
         title: 2012 MS in Computer Science
         sub_title: University of Science, Vietnam National University (VNU-HCM)
         caption: Thesis title "Study on Tag Anti-Collison using Time Division Multiple Access approach for the SELab MIFARE reader"
-        quote:
-        description:
+        quote: >
+        description: | # this will include new lines to allow paragraphs
 
       - layout: top-middle
         title: 2009 BS in Computer Science
         sub_title: University of Science, Vietnam National University (VNU-HCM)
         caption: Excellent grade
-        quote:
-        description:
+        quote: >
+        description: | # this will include new lines to allow paragraphs
 
   - title: Professional Appointments # Title for the section
     layout: list # Type of content section (list/text)
@@ -72,69 +73,62 @@ content:
           + Operating Systems course
           + Computer Organization course
 
-  - title: Experience # Title for the section
+      - layout: top
+        title: Researcher at Software Engineering Laboratory
+        sub_title: University of Science, VNU-HCM
+        caption: 2010 - 2015
+        quote: >
+          Conducted 4 useful research projects for the Department of Science and Technology Ho Chi Minh city in Vietnam.
+        description: | # this will include new lines to allow paragraphs
+          + Researched and made a NFC reader/writer using MFRC522 MCU. This small gadget supports various kinds of NFC tags, including 1K/4K, Ultralight and DESFire EV1.
+          + Built a data capture device via RS232 and USB interface. This device would be plugged into any bill printer to collect every single byte of data printed.
+          + Built a time attendance system based on S3C2440-ARM9-based board. The cool thing was that each user's fingerprint minutiae was stored in their RFID tag instead of using a centralized database.
+          + Developed a C Compiler for a domestic 8-bit MCU named SG8V1.
+
+  - title: Work Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top
-        title: Embedded Engineer
-        sub_title: FPT Software
-        caption: 07/2022 - now
-        quote:
+        title: Remote Embedded Software Engineer
+        sub_title: Harman R&D Center (A Samsung Company), Suzhou, China
+        caption: 2022 - now
+        quote: >
         description: | # this will include new lines to allow paragraphs
-          + Developed new features related to system management including battery, thermal, poweric,
-          self reset.
+          + Developed new features related to system management including battery, thermal, poweric, self reset.
 
       - layout: top
         title: Embedded Engineer, DevOps Engineer
         sub_title: Leanwell Technology Co., Ltd
-        caption: 08/2017 - 01/2022
-        quote:
-          The company aims to make a whole system for manufacturing operations management (MOM) for small enterprises in Vietnam.
+        caption: 2017 - 2021
+        quote: >
+          My main aim in this startup was to collect as much data as possible by creating IoT devices.
         description: | # this will include new lines to allow paragraphs
-          + Led an IoT team of 3 staff to research and build embedded products.
+          + Led an IoT team of 4 staff in researching and building commercial embedded products.
           + Deployed 500+ embedded devices at clients' factories.
           + Managed to bridge the gap between the software development team and IT operation guys at the client sites: deploy software releases as quickly as possible,
-          ensure services are easily scalable as well as have the ability of high availability, and protect servers against hackers.
-          + Played the role of purchasing relating to various electronic components.
-          + Set up mass production processes for company's products.
-
-      - layout: top
-        title: Embedded Software Researcher
-        sub_title: Software Engineering Laboratory, University of Science, Vietnam National University (VNU-HCM)
-        caption: 12/2009 - 09/2015
-        quote:
-          SELab was established in 2002 where I significantly gained knowledge from various types of research and leveled up my skills. I very much
-          appreciate the time everybody spent for me when I was here.
-        description: | # this will include new lines to allow paragraphs
-          + Developed an ASM/C Compiler for a domestic 8-bit MCU named SG8V1.
-          + Built a time attendance system on S3C2440-ARM9-based board. The cool thing is that
-          each user's fingerprint minutiae is stored in their RFID tag instead of using a centralized database.
-          + Built a MIFARE reader/writer using MFRC522 MCU. This reader supports various kinds of MIFARE tags,
-          such as 1K/4K, Ultralight and DESFire EV1.
-          + Created a data capture device via RS232 and USB interface. This device will be plugged into a bill printer to collect every single byte of data printed.
-          + Played Technical Manager role in Renesas Car Rally which has been held at University of Science for every student in the Southern of Vietnam.
+          ensure that services are easily scalable as well as have the ability of high availability, and protect servers against hackers.
+          + Set up mass production processes for all embedded products.
 
       - layout: top
         title: Embedded Software Engineer
         sub_title: ZenithTek Co., Ltd
-        caption: 02/2012 -  07/2015
-        quote:
-          ZenithTek was a hightech startup founded in Vietnam in 2012 in which they mainly focused on improving operational effeciency of firms.
-        description: | # this will include new
-          + Worked with a hardware guy to design and develop a compact embedded device that is similar to Raspberry Pi.
+        caption: 2012 - 2015
+        quote: >
+          My goal.
+        description: | # this will include new lines to allow paragraphs
+          + Worked closely with a hardware guy to design and develop a compact embedded device that is similar to Raspberry Pi.
           + Created a hacked version of a tape dispenser device in which an in-house board was injected into the original device to make it smarter.
-          + Deployed nearly 150 embedded devices that closely integrated with web applications on quality control lines in clients' factories => completely replaced paperwork and improved performance by around 20%.
+          + Deployed nearly 150 embedded devices that closely integrated with web applications on quality control lines at clients' factories => completely replaced paperwork and improved performance by around 20%.
 
       - layout: top
         title: Embedded Software Internship
         sub_title: NXP Semiconductors Vietnam
-        caption: 09/2008 - 11/2008
-        quote:
-          The laboratory where I did my thesis had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the thesis
+        caption: 09/2008 - 12/2008
+        quote: >
+          The laboratory where I did my thesis had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the BS thesis
           under expert guidance and the professional workplace.
         description: | # this will include new lines to allow paragraphs
-          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification
-          and provides three USB classes including Audio, Human Interface Device (HID) and Mass Storage.
+          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification and provides three USB classes including Audio, Human Interface Device (HID) and Mass Storage.
 
 # Footer
 footer_show_references: true
