--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ additional_links:
 about_profile_image: images/default.jpg
 # about_profile_image: images/white-khanh.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Dear Sir,
+  Dear Professor Young Soo Suh,
 
   My name is Khanh, and I have been a lecturer at the University of Information Technology in Vietnam for years. Working for other technology enterprises besides teaching is also one of my strengths. I'm currently seeking to undertake PhD research regarding the development of embedded systems and IoT field.
 
