--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/default.jpg
-# about_profile_image: images/white-khanh.jpg
+# about_profile_image: images/default.jpg
+about_profile_image: images/white-khanh.jpg
 about_content: | # this will include new lines to allow paragraphs
   Dear Professor Young Soo Suh,
 
