--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 #############################################################
-## The below content is copied from _config-senior.yml
+## The below content is copied from _config-default.yml
 #############################################################
 
 # Site
+# repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
@@ -10,15 +11,29 @@ version: 2
 
 # Personal info
 name: Khanh Q. Chung
-title: Lecturer | Embedded Engineer | DevOps Engineer
-email: khanhcq@uit.edu.vn
+title: Embedded & DevOps Engineer
+email: reedus.chung@gmail.com
 phone: (+84) 907060401
+Address: Ho Chi Minh, Vietnam
+# website: https://reenor.github.io
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
+# twitter_username: facespics
+github_username:  reenor
+# stackoverflow_username: "00000001"
+# dribbble_username: jekyll
+# facebook_username: jekyll
+# flickr_username: jekyll
+# instagram_username: jameswgrant
 linkedin_username: reedus
+# xing_username: jekyll
+# pinterest_username: jekyll
+# youtube_username: globalmtb
+# googleplus_username: +jekyll
+# orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
@@ -28,110 +43,111 @@ additional_links:
 
 # About Section
 # about_title: About Me
-# about_profile_image: images/default.jpg
-about_profile_image: images/white-khanh.jpg
+about_profile_image: images/default.jpg
+# about_profile_image: images/white-khanh.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Dear Professor Young Soo Suh,
+  Dear Sir/Madam,
 
-  My name is Khanh, and I have been a lecturer at the University of Information Technology in Vietnam for years. Working for other technology enterprises besides teaching is also one of my strengths. I'm currently seeking to undertake PhD research regarding the development of embedded systems and IoT field.
+  My name is Khanh, and I'm a careful embedded engineer with more than 8 years of experience.
+  In addition, I have 2 years of experience working as a DevOps engineer guy.
+  I'm currently working as a freelancer and teaching some courses relating to embedded designing and programming at the university level.
 
-  I strongly believe that my ability and effort will be a good fit for the PhD position, and working in your group will be my best opportunity to show you my best.
+  I enjoy thinking deeply before writing code as well as having a curious mindset about how the different components fit together.
+  Working with various languages, IDEs, peripherals and platforms is what I accumulated over years and I'm really inspired by opportunities to work with something new to widen my tech stack.
 
-  I'm looking forward to hearing answer from you soon.
+  Besides, I gained a strong background in algorithms throughout a couple of years as a researcher.
+
+  Working in your organization will be my best opportunity to show you my best. I'm looking forward to hearing the answer from you soon.
 
 content:
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: 2012 MS in Computer Science
-        sub_title: University of Science, Vietnam National University (VNU-HCM)
-        caption: Thesis title "Study on Tag Anti-Collison using Time Division Multiple Access approach for the SELab MIFARE reader"
-        quote: >
-        description: | # this will include new lines to allow paragraphs
-
-      - layout: top-middle
-        title: 2009 BS in Computer Science
+        title: Bachelor of Computer Science, 2009
         sub_title: University of Science, Vietnam National University (VNU-HCM)
         caption: Excellent grade
-        quote: >
-        description: | # this will include new lines to allow paragraphs
+        quote:
+        description:
 
-  - title: Professional Appointments # Title for the section
+      - layout: top-middle
+        title: Master of Computer Science, 2012
+        sub_title: University of Science, Vietnam National University (VNU-HCM)
+        caption: Defended MSc thesis on topic "Study on Tag Anti-Collison using Time Division Multiple Access approaches for the MIFARE reader" with the mark as Excellent
+        quote:
+        description:
+
+  - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top
-        title: Lecturer at the Department of Embedded Systems and Robotics
-        sub_title: University of Information Technology
-        caption: 2016 - now
-        quote: >
-          Supervised 5 BS theses. Taught a total of 5 undergraduate courses as the following
-        description: | # this will include new lines to allow paragraphs
-          + Embedded Systems Programming course
-          + Embedded Systems Design course
-          + Microprocessor and Microcontroller course
-          + Operating Systems course
-          + Computer Organization course
-
-      - layout: top
-        title: Researcher at Software Engineering Laboratory
-        sub_title: University of Science, VNU-HCM
-        caption: 2010 - 2015
-        quote: >
-          Conducted 4 useful research projects for the Department of Science and Technology Ho Chi Minh city in Vietnam.
-        description: | # this will include new lines to allow paragraphs
-          + Researched and made a NFC reader/writer using MFRC522 MCU. This small gadget supports various kinds of NFC tags, including 1K/4K, Ultralight and DESFire EV1.
-          + Built a data capture device via RS232 and USB interface. This device would be plugged into any bill printer to collect every single byte of data printed.
-          + Built a time attendance system based on S3C2440-ARM9-based board. The cool thing was that each user's fingerprint minutiae was stored in their RFID tag instead of using a centralized database.
-          + Developed a C Compiler for a domestic 8-bit MCU named SG8V1.
-
-  - title: Work Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: top
-        title: Remote Embedded Software Engineer
-        sub_title: Harman R&D Center (A Samsung Company), Suzhou, China
-        caption: 2022 - now
-        quote: >
-          Exposed myself to the exciting automotive industry
-        description: | # this will include new lines to allow paragraphs
-          + Designed and developed the communication stack and bootloader used in NXP S32K3xx MCU
-          + Researched and developed new features related to Over-The-Air update feature
-          + Analyzed cyber security features and set up unit testing for the secure software module
-
-      - layout: top
-        title: Embedded Engineer, DevOps Engineer
+        title: Embedded Engineer, DevOps Engineer, Self-employed
         sub_title: Leanwell Technology Co., Ltd
-        caption: 2017 - 2021
+        caption: 08/2017 - 05/2022
         quote: >
-          My main aim in the 2nd startup was to collect as much data as possible by creating various IoT devices.
+          The company aims to make a whole system for manufacturing operations management (MOM) for small enterprises in Vietnam.
         description: | # this will include new lines to allow paragraphs
-          + Led an IoT team of 4 staff in researching and building commercial embedded products.
-          + Deployed 500+ embedded devices at clients' factories.
+          + Led an IoT team of 3 staff to research and build all embedded products.
+          + Deployed 500+ above products at clients' factories.
           + Managed to bridge the gap between the software development team and IT operation guys at the client sites: deploy software releases as quickly as possible,
-          ensure that services are easily scalable as well as have the ability of high availability, and protect servers against hackers.
-          + Set up mass production processes for all embedded products.
+          ensure services are easily scalable as well as have the ability of high availability, and protect servers against hackers.
+          + Played the role of purchasing relating to various electronic components.
+          + Set up mass production processes of all company products.
 
       - layout: top
-        title: Embedded Software Engineer
-        sub_title: ZenithTek Co., Ltd
-        caption: 2012 - 2015
-        quote: >
-          My 1st startup was to solve the problem related to how to improve workers' performance in quality control lines
+        title: Lecturer
+        sub_title: Faculty of Computer Engineering, University of Information Technology, Vietnam National University (VNU-HCM)
+        caption: 10/2015 - Now
+        link: https://en.uit.edu.vn
+        quote:
         description: | # this will include new lines to allow paragraphs
-          + Worked closely with a hardware guy to design and develop a compact embedded device that is similar to Raspberry Pi.
-          + Created a hacked version of a tape dispenser device in which an in-house board was injected into the original device to make it smarter.
-          + Deployed nearly 150 embedded devices that closely integrated with web applications on quality control lines at clients' factories => completely replaced paperwork and improved performance by around 20%.
+          + Taught Embedded Systems Programming course which is about microcontroller programming for senior students.
+          + Taught Embedded Systems Design course.
+          + Taught Microprocessor and Microcontroller course for junior students.
+          + Taught Operating System course for sophomore students.
+
+      - layout: top
+        title: Embedded Software Engineer, Self-employed
+        sub_title: ZenithTek Co., Ltd
+        caption: 02/2012 -  07/2015
+        quote: >
+          ZenithTek was a high-tech startup founded in Vietnam in 2012 in which we mainly focused on improving the operational efficiency of firms.
+          The company went out of business after three years.
+        description: | # this will include new
+          + Worked with a hardware guy to design and develop a compact device named "Mini Terminal" that is similar to a mini computer.
+          + Created a hacked version of the tape dispenser named "M-800 Entry" in which an in-house board was injected into their original one to make it smarter.
+          + Deployed nearly 150 Mini Terminal devices that closely integrated with our web applications on quality control lines in client’s factories => completely replaced paperwork and improved performance by around 20%.
+          + Played Office Administrator role.
+
+      - layout: top
+        title: Embedded Software Researcher
+        sub_title: Software Engineering Laboratory, University of Science, Vietnam National University (VNU-HCM)
+        caption: 12/2009 - 09/2015
+        link: https://www.selab.hcmus.edu.vn
+        quote: >
+          SELab was established in 2002 where I significantly gained knowledge from various types of research and leveled up my skills. I very much
+          appreciate the time everybody spent with me when I was here.
+        description: | # this will include new lines to allow paragraphs
+          + Developed an ASM/C Compiler for a domestic 8-bit MCU named SG8V1.
+          + Built a time attendance system on [S3C2440 ARM9](http://www.friendlyarm.net/products/mini2440) board. The cool thing is that
+          each user's fingerprint minutiae are stored in their RFID tag instead of using a centralized database.
+          + Built a MIFARE reader/writer using [RC522](https://www.nxp.com/docs/en/data-sheet/MFRC522.pdf) MCU. This reader supports various kinds of MIFARE tags,
+          such as 1K/4K, Ultralight, and DESFire EV1.
+          + Created a data capture device via RS232 & USB interface. This device will be plugged into a bill printer to collect every single byte of data printed.
+          + Played Technical Manager role in [Renesas Car Rally](https://www.renesas.com/us/en/about/car-rally) which has been held at the University of Science
+          for every student in Southern Vietnam. [Take a look](https://www.youtube.com/watch?v=y6xDSP0UO4M) at how this race is fun.
 
       - layout: top
         title: Embedded Software Internship
         sub_title: NXP Semiconductors Vietnam
-        caption: 09/2008 - 12/2008
+        caption: 09/2008 - 11/2008
         quote: >
-          The laboratory where I did my thesis had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the BS thesis
-          under expert guidance and the professional workplace.
+          The laboratory where I did my thesis had established a partner relationship with NXP Vietnam; therefore, I luckily had a chance to carry out the thesis
+          under expert guidance and in the professional workplace.
         description: | # this will include new lines to allow paragraphs
-          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification and provides three USB classes including Audio, Human Interface Device (HID) and Mass Storage.
+          + Developed a lightweight USB host library running on the MCB2388 evaluation board. This library complies with USB 2.0 Specification
+          and provides three USB classes including Audio, Human Interface Device (HID), and Mass Storage.
+          + Applied version control principle to manage and track changes to code and assets across the USB project using SVN software.
 
 # Footer
 footer_show_references: true
